--- a/app/blocks/catalog-filter/catalog-filter.twig
+++ b/app/blocks/catalog-filter/catalog-filter.twig
@@ -286,7 +286,7 @@
     <div class="catalog-filter__sort-filter js-filter-select">
       <div class="catalog-filter__sort-text">
         <div class="catalog-filter__sort-span">Сортировать по:</div>
-        <div class="catalog-filter__sort-param" data-type="По возрастанию цены">Возрастанию цены</div>
+        <div class="catalog-filter__sort-param js-sort-param" data-type="По возрастанию цены">Возрастанию цены</div>
         <svg class="catalog-filter__icon catalog-filter__sort-icon" viewBox="0 0 100 100">
           <use xlink:href="./assets/images/sprite.svg#select-arrow"></use>
         </svg>
@@ -310,7 +310,7 @@
     <div class="catalog-filter__sort-filter catalog-filter__sort-filter--num js-filter-select">
       <div class="catalog-filter__sort-text">
         <div class="catalog-filter__sort-span">Показывать по:</div>
-        <div class="catalog-filter__sort-param" data-type="12">12</div>
+        <div class="catalog-filter__sort-param js-sort-param" data-type="12">12</div>
         <svg class="catalog-filter__icon catalog-filter__sort-icon" viewBox="0 0 100 100">
           <use xlink:href="./assets/images/sprite.svg#select-arrow"></use>
         </svg>
