--- a/app/pages/index.twig
+++ b/app/pages/index.twig
@@ -24,6 +24,15 @@
         <a class="progress__link" href="./catalog.html" target="_blank">Каталог</a>
       </li>
       <li class="progress__item">
+        <a class="progress__link" href="./basket.html" target="_blank">Корзина</a>
+      </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./ordering.html" target="_blank">Оформление заказа</a>
+      </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./favourites.html" target="_blank">Избранное</a>
+      </li>
+      <li class="progress__item">
         <a class="progress__link" href="./about.html" target="_blank">О нас</a>
       </li>
       <li class="progress__item">
@@ -31,6 +40,9 @@
       </li>
       <li class="progress__item">
         <a class="progress__link" href="./action.html" target="_blank">Акции</a>
+      </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./action-text.html" target="_blank">Акции текстовая</a>
       </li>
       <li class="progress__item">
         <a class="progress__link" href="./partners.html" target="_blank">Партнеры</a>
