--- a/app/styles/helpers/optimize.scss
+++ b/app/styles/helpers/optimize.scss
@@ -218,10 +218,10 @@ input[type="range"] {
 // Tables
 // ==========================================================================
 // Remove most spacing between table cells.
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
+// table {
+//   border-collapse: collapse;
+//   border-spacing: 0;
+// }
 
 // Iframes
 // ==========================================================================
