--- a/app/styles/helpers/variables.scss
+++ b/app/styles/helpers/variables.scss
@@ -10,6 +10,12 @@ $sm: 500px;
   object-fit: cover;
 }
 
+%contain {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
 %bg-cover {
   background-size: cover;
   background-position: center;
