--- a/app/blocks/about/about.scss
+++ b/app/blocks/about/about.scss
@@ -223,35 +223,37 @@
 }
 
 .video-iframe {
-  width: 100%;
-  height: 60rem;
-
-  @media (max-width: $lg) {
-    height: 35rem;
-  }
-
-  @media (max-width: $sm) {
-    height: 20rem;
-  }
-}
-
-.iframe-popup {
-  background-color: transparent;
-}
-
-.iframe-popup-close {
   position: absolute;
-  top: -1rem;
-  right: -1rem;
-  color: var(--white);
-  transition: color 0.3s;
+  width: 100%;
 
-  &:focus {
-    box-shadow: none;
+  @extend %pos-center-xy;
+
+  &__video {
+    height: 60rem;
+    width: 100%;
+
+    @media (max-width: $md) {
+      height: 25rem;
+    }
   }
 
-  &:hover {
-    color: var(--green);
+  &__close-btn {
+    position: absolute;
+    top: -2rem;
+    right: 0;
+    border: none;
+    background-color: transparent;
+  }
+
+  &__close-icon {
+    width: 1.4rem;
+    height: 1.4rem;
+    fill: var(--white);
+    transition: fill 0.3s;
+
+    &:hover {
+      fill: var(--green);
+    }
   }
 }
 
