--- a/app/blocks/layout/base.twig
+++ b/app/blocks/layout/base.twig
@@ -3,6 +3,7 @@
   popup: {
     sign: true,
     id: "signin-popup",
+    class: "signin-popup",
     title: "Войти",
     noAcc: true,
     btnText: "Войти",
@@ -20,6 +21,7 @@
   popup: {
     sign: true,
     id: "signup-popup",
+    class: "signup-popup",
     title: "Зарегистрироваться",
     noAcc: false,
     btnText: "Зарегистрироваться",
@@ -37,12 +39,14 @@
   popup: {
     sign: true,
     id: "passw-recovery-popup",
+    class: "passw-recovery-popup",
     title: "Восстановление пароля",
     noAcc: false,
     btnText: "Отправить",
     forgetPassw: false,
     placeholderPhone: "Ваш телефон",
     isSubtitle: true,
+    subtitleText: "Пожалуйста, введите ваш адрес электронной почты, на который мы отправим ссылку для восстановления пароля",
     isEmail: true,
     isPhone: false,
     isPassw: false,
