--- a/app/pages/index.twig
+++ b/app/pages/index.twig
@@ -27,6 +27,9 @@
         <a class="progress__link" href="./basket.html" target="_blank">Корзина</a>
       </li>
       <li class="progress__item">
+        <a class="progress__link" href="./profile.html" target="_blank">Мой профиль</a>
+      </li>
+      <li class="progress__item">
         <a class="progress__link" href="./ordering.html" target="_blank">Оформление заказа</a>
       </li>
       <li class="progress__item">
