--- a/app/pages/passw-recovery.twig
+++ b/app/pages/passw-recovery.twig
@@ -10,6 +10,7 @@
     forgetPassw: false,
     placeholderPhone: "Ваш телефон",
     isSubtitle: true,
+    subtitleText: "Пожалуйста, введите ваш адрес электронной почты, на который мы отправим ссылку для восстановления пароля",
     isEmail: true,
     isPhone: false,
     isPassw: false,
