--- a/app/pages/index.twig
+++ b/app/pages/index.twig
@@ -18,6 +18,12 @@
         <a class="progress__link" href="./passw-recovery.html" target="_blank">Попап восстановление пароля</a>
       </li>
       <li class="progress__item">
+        <a class="progress__link" href="./ordering-popup.html" target="_blank">Попап оформления заказа</a>
+      </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./callback-popup.html" target="_blank">Попап обратная связь</a>
+      </li>
+      <li class="progress__item">
         <a class="progress__link" href="./main.html" target="_blank">Главная</a>
       </li>
       <li class="progress__item">
@@ -28,6 +34,9 @@
       </li>
       <li class="progress__item">
         <a class="progress__link" href="./profile.html" target="_blank">Мой профиль</a>
+      </li>
+      <li class="progress__item">
+        <a class="progress__link" href="./active-orders.html" target="_blank">Активные заказы</a>
       </li>
       <li class="progress__item">
         <a class="progress__link" href="./ordering.html" target="_blank">Оформление заказа</a>
