--- a/app/blocks/contacts-form/contacts-form.scss
+++ b/app/blocks/contacts-form/contacts-form.scss
@@ -415,6 +415,83 @@
   &__passw-wrap {
     position: relative;
   }
+
+  &__policy-block {
+    @extend %flex-between;
+    flex-wrap: wrap;
+    margin-bottom: -2rem;
+
+    > * {
+      margin-bottom: 2rem;
+
+      &:not(:last-child) {
+        margin-right: 2rem;
+      }
+    }
+  }
+
+  &__policy {
+    font-size: 1.4rem;
+    line-height: 2.4rem;
+    color: var(--gray3);
+
+    transition: color 0.3s;
+
+    a {
+      color: var(--green);
+
+      &:hover {
+        color: var(--hover-green);
+      }
+    }
+  }
+
+  &__btns-block {
+    > * {
+      &:not(:last-child) {
+        margin-right: 1rem;
+      }
+    }
+  }
+
+  &__cancel-btn {
+    font-size: 1.6rem;
+    line-height: 1.6rem;
+    font-weight: 500;
+    padding: 2.3rem 4rem;
+    border: 0.1rem solid var(--gray5);
+    background-color: transparent;
+
+    transition: border 0.3s;
+
+    &:hover {
+      border: 0.1rem solid var(--green);
+    }
+
+    @media (max-width: $sm) {
+      padding: 2.3rem 3rem;
+    }
+  }
+
+  &__save-btn {
+    font-size: 1.6rem;
+    line-height: 1.6rem;
+    font-weight: 500;
+    padding: 2.3rem 4rem;
+    color: var(--white);
+    border: none;
+    background-color: var(--green);
+
+    transition: background-color 0.3s;
+
+    &:hover {
+      background-color: var(--hover-green);
+    }
+
+    @media (max-width: $sm) {
+      padding: 2.3rem 3rem;
+    }
+  }
 }
 
 .radio-style {
