--- a/app/pages/basket.twig
+++ b/app/pages/basket.twig
@@ -33,6 +33,8 @@
                   },
                   price: '4 550 ₽',
                   discountPrice: '2 350 ₽',
+                  priceTitle: 'Стоимость',
+                  counter: true,
                 },
                 {
                   jpgImg: './assets/images/product-item/02.jpg',
@@ -46,6 +48,8 @@
                   },
                   price: '7 000 ₽',
                   discountPrice: '5 599 ₽',
+                  priceTitle: 'Стоимость',
+                  counter: true,
                 }
               ]
             }
